Fix JDK8 missing features
Signed-off-by: Peter Nied <petern@amazon.com>